--- a/WebAppli_BigData/web/index.html
+++ b/WebAppli_BigData/web/index.html
@@ -14,7 +14,7 @@ and open the template in the editor.
         <H3>*** Isil-Data-Scientist ***</H3> 
         <P>Please login : 
         <BR>&nbsp;<BR>&nbsp; 
-        <form method="GET" action="/CaddieVirtuel_2/Login"> 
+        <form method="GET" action="/WebAppli_BigData/Login"> 
         <P>User name : <input type="text" name="username" size=32></P>
         <P>Password  : <input type="text" name="password" size=32></P> 
         <P><input type="submit" value="Login"></P> <!-- Le bt de type submit, va directement apeller la methode specifier au dessus-->
